--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,19 +11,19 @@ spring.application.name="Freerider Reservation System"
 spring.main.banner-mode=console
 
 # Use MySQL database
-# spring.datasource.url=jdbc:mysql://localhost:3306/FREERIDER_DB
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.username=freerider
-# spring.datasource.password=free.ride
+spring.datasource.url=jdbc:mysql://localhost:3306/FREERIDER_DB
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=freerider
+spring.datasource.password=free.ride
 # 
 # Use embedded H2 database
 # https://www.baeldung.com/spring-boot-h2-database
-spring.datasource.url=jdbc:h2:mem:freerider
+# spring.datasource.url=jdbc:h2:mem:freerider
 # spring.datasource.url=jdbc:h2:file:./.database/freerider.h2
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=false
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=false
 # 
 spring.sql.init.schema-locations=classpath:sql/freerider-schema.sql
 spring.sql.init.data-locations=classpath:sql/freerider-data.sql
